Atualizando classe trasnferencia e adicionando documentacao
